src/test/deca/context/invalid/improvided/decl_var_void.deca
{
   // Description: 
   // Test la déclaration d'une variable de type void.
   //
   // Resultats:
   // Erreur Contextuelle
   // Ligne 6: The given type is Void.
   void x;
}
